[gd_scene load_steps=6 format=3 uid="uid://bjh1ua15fd23m"]

[ext_resource type="Script" uid="uid://bgu2wdlrww2dm" path="res://Scripts/MainMenu.gd" id="1_853f1"]
[ext_resource type="Texture2D" uid="uid://3w1mvfoeq60o" path="res://Assets/sf64-bg.png" id="2_8saeu"]
[ext_resource type="AudioStream" uid="uid://dxxjebdcilp44" path="res://Assets/menuselect-sfx.wav" id="3_8saeu"]
[ext_resource type="AudioStream" uid="uid://dk7jw54bgtiru" path="res://Assets/goodluck-sfx.wav" id="4_df05h"]
[ext_resource type="AudioStream" uid="uid://r3emd3qieapu" path="res://Assets/starfox64-opentheme-remix.wav" id="5_8um5k"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_853f1")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8saeu")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -23.5
offset_right = 20.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0.45490196, 1, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 50
text = "DOGFIGHT"
horizontal_alignment = 1

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "NEW GAME"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "v0.5-proto"

[node name="SelectSFX" type="AudioStreamPlayer" parent="VBoxContainer"]
stream = ExtResource("3_8saeu")

[node name="ConfirmSFX" type="AudioStreamPlayer" parent="VBoxContainer"]
stream = ExtResource("4_df05h")
volume_db = 5.0

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8um5k")
volume_db = -15.0

[node name="Keyboard" type="RichTextLabel" parent="."]
offset_left = 22.0
offset_top = 484.0
offset_right = 213.0
offset_bottom = 648.0
text = "Keyboard Controls:

WASD = Movement
I = Shoot
Q/E = Bank/Barrel Roll
J = Boost
K = Brake"

[node name="Controller" type="RichTextLabel" parent="."]
offset_left = 213.0
offset_top = 484.0
offset_right = 404.0
offset_bottom = 648.0
text = "Joystick (Xbox) Controls:

Right Stick = Movement
A = Shoot
LB/RB = Bank/Barrel Roll
RT = Boost
LT = Brake"

[node name="Label" type="Label" parent="."]
offset_left = 482.0
offset_top = 544.0
offset_right = 683.0
offset_bottom = 649.0
text = "Pause is busted so don't press it unless you wanna restart or quit lmaoo"
autowrap_mode = 3

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
